--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Orbitron', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,6 +14,7 @@
 }
 
 a {
+  font-family: 'Orbitron', sans-serif;
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -31,6 +32,7 @@ body {
 }
 
 h1 {
+  font-family: 'Orbitron', sans-serif;
   font-size: 3.2em;
   line-height: 1.1;
 }
@@ -41,10 +43,10 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  font-family: 'Orbitron', sans-serif;
 }
 button:hover {
   border-color: #646cff;
