nueva pantalla mi hogar, mejor css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,7 +50,7 @@ p {
 
 button {
   padding: 0.6rem 1.4rem;
-  background-color: #0abde3;
+  background-color: #7397ba;
   border: none;
   color: white;
   font-weight: bold;
@@ -62,5 +62,5 @@ button {
 }
 
 button:hover {
-  background-color: #009ecb;
+  background-color: #5f7c9a;
 }
