Se agrega el boton de volver atras. Se acomoda bien al usarlo en modo dispositivo movil.

--- a/frontend/src/pages/mainPage.css
+++ b/frontend/src/pages/mainPage.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 }
 
 .header {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
