--- a/frontend/src/pages/mainPage.css
+++ b/frontend/src/pages/mainPage.css
@@ -55,12 +55,20 @@
 
 .edit-button {
     position: fixed;
-    top: 20px;
-    right: 20px;
-    background: none;
+    top: 100px;
+    right: 370px;
+    background: #7397ba;
     border: none;
     cursor: pointer;
-    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    z-index: 20;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, background-color 0.2s ease;
 }
 
 .edit-button button {
