--- a/frontend/src/components/loginPopup.css
+++ b/frontend/src/components/loginPopup.css
@@ -8,6 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    pointer-events: all;
+    z-index: 9999;
 }
 
 .modal {
@@ -41,4 +43,28 @@
 
 .modal h2 {
     font-family: 'Orbitron', sans-serif;
+}
+
+.modal select {
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Orbitron', sans-serif;
+    background-color: #222;
+    color: white;
+}
+.modal option {
+    background-color: #222;
+    color: white;
+}
+
+.modal label{
+    margin-right: 0.5rem;
+}
+
+.modal input:disabled {
+    background-color: white;
+    color: black;
+    opacity: 1;
 }
