--- a/frontend/src/pages/roomDetail.css
+++ b/frontend/src/pages/roomDetail.css
@@ -197,3 +197,68 @@ h2 {
     justify-content: flex-end;
     padding: 30px;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+    margin-top: 10px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.switch-container {
+    display: inline-block;
+    margin-top: 8px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 24px;
+}
+.slider.on {
+    background-color: #4f46e5;
+}
+
+.slider.off {
+    background-color: #ccc;
+}
+
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+.slider.on:before {
+    transform: translateX(26px);
+}
+
+input:checked + .slider {
+    background-color: #4f46e5;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.switch input, .slider {
+    pointer-events: none;
+}
