--- a/frontend/src/pages/mainPage.css
+++ b/frontend/src/pages/mainPage.css
@@ -48,7 +48,7 @@
     text-align: center;
     background-color: #7397ba;
     cursor: pointer;
-    margin-top: 10px;
+    margin: 5px;
 }
 
 .room-button:hover {
