--- a/frontend/src/components/loginPopup.css
+++ b/frontend/src/components/loginPopup.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: var(--light-grone);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,11 +13,11 @@
 }
 
 .modal {
-    background-color: rgb(0, 0, 0);
+    background-color: var(--light-grone);
     padding: 2rem;
     border-radius: 8px;
     width: 300px;
-    color: white;
+    color: var(--ghost-white);
     display: flex;
     flex-direction: column;
 }
@@ -37,8 +37,8 @@
 }
 
 .modal-actions .login {
-    background-color: #0abde3;
-    color: white;
+    background-color: var(--grape);
+    color: var(--ghost-white);
 }
 
 .modal h2 {
@@ -52,11 +52,11 @@
     border-radius: 4px;
     font-family: 'Orbitron', sans-serif;
     background-color: #222;
-    color: white;
+    color: var(--ghost-white);
 }
 .modal option {
     background-color: #222;
-    color: white;
+    color: var(--ghost-white);
 }
 
 .modal label{
@@ -64,7 +64,7 @@
 }
 
 .modal input:disabled {
-    background-color: white;
-    color: black;
+    background-color: var(--ghost-white);
+    color: var(--light-grone);
     opacity: 1;
 }
