--- a/frontend/src/components/rule.css
+++ b/frontend/src/components/rule.css
@@ -4,18 +4,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: var(--light-grone);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .modal-rule {
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: var(--light-grone);
     padding: 2rem;
     border-radius: 8px;
     width: 300px;
-    color: white;
+    color: var(--ghost-white);
     display: flex;
     flex-direction: column;
     overflow: scroll;
@@ -52,12 +52,12 @@
     border: none;
     border-radius: 4px;
     font-family: 'Orbitron', sans-serif;
-    background-color: #222;
-    color: white;
+    background-color: var(--light-grone);
+    color: var(--ghost-white);
 }
 .modal-rule option {
     background-color: #222;
-    color: white;
+    color: var(--ghost-white);
 }
 
 .modal-rule label{
@@ -65,7 +65,7 @@
 }
 
 .modal-rule input:disabled {
-    background-color: white;
-    color: black;
+    background-color: var(--ghost-white);
+    color: var(--light-grone);
     opacity: 1;
 }
