--- a/frontend/src/pages/rules.css
+++ b/frontend/src/pages/rules.css
@@ -11,11 +11,11 @@
     position: relative;
     border-radius: 12px;
     margin-bottom: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 5px var(--light-grone);
     width: 300px;
     text-align: center;
-    background-color: #7397ba;
-    color: white;
+    background-color: var(--blue-gray);
+    color: var(--ghost-white);
     cursor: pointer;
     display: flex;
     flex-direction: column;
@@ -27,9 +27,9 @@
 .rule-details {
     margin-top: 10px;
     padding-top: 10px;
-    border-top: 1px solid #5f76aa;
+    border-top: 1px solid var(--dark-gray);
     font-size: 0.9rem;
-    color: #333;
+    color: var(--light-grone);
 }
 
 .rule-details ul {
@@ -38,12 +38,12 @@ padding: 0;
 
 
 .rule-button.expanded {
-    background-color: #5f76aa;
+    background-color: var(--majorelle-blue);
     padding-bottom: 20px;
 }
 
 .error {
-    color: red;
+    color: var(--tropical-indigo);
     font-size: 0.8rem;
     margin-top: 4px;
     display: block;
