--- a/frontend/src/components/styles/loginPopup.css
+++ b/frontend/src/components/styles/loginPopup.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: var(--light-grone);
+    background-color: var(--blue-gray);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
 }
 
 .modal {
-    background-color: var(--light-grone);
+    background-color: var(--blue-gray);
     padding: 2rem;
     border-radius: 8px;
     width: 300px;
