--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 :root{
-  /* CSS HEX */
+  /* PALETA DE COLORES, SOLO USAR ESTOS */
   --alarm-red: #ff4444; /*#941E1F;*/
   --violeta: #54138d; /* ver si este no es muy violento */
   --grape: #793E5C;
