--- a/frontend/src/components/styles/header.module.css
+++ b/frontend/src/components/styles/header.module.css
@@ -37,6 +37,7 @@
 /* Logo */
 .headerLogo{
     height: 100px;
+    filter: drop-shadow(0px 1px 1px rgba(255, 255, 255, 0.8));
 }
 
 /* Fondo clicable para cerrar el menú */
