--- a/frontend/src/pages/styles/mainPage.css
+++ b/frontend/src/pages/styles/mainPage.css
@@ -86,43 +86,6 @@
 .icon {
     padding: 10px 0;
 }
-.room-editable {
-    position: relative;
-}
-
-.room-editable-container {
-    position: relative;
-    cursor: pointer;
-}
-
-.room-button.edit-mode {
-    transition: all 0.3s ease;
-}
-
-.room-button.edit-mode:hover {
-    opacity: 0.7;
-}
-
-.delete-icon-full {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--light-grone);
-    border-radius: 12px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    font-size: 2rem;
-    color: white;
-}
-
-.room-editable-container:hover .delete-icon-full {
-    opacity: 1;
-}
 
 
 .modal-backdrop {
@@ -152,3 +115,55 @@
     display: flex;
     justify-content: space-between;
 }
+
+.room-button.edit-mode {
+    position: relative;
+    transition: all 0.3s ease;
+    overflow: hidden;
+}
+
+.room-button.edit-mode::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(138, 153, 168, 0.6);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 1;
+}
+.room-button.edit-mode:hover::before {
+    opacity: 1;
+}
+
+.delete-icon-full {
+    position: absolute;
+    font-size: xxx-large;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    transition: opacity 0.3s ease;
+}
+
+.room-button.edit-mode img,
+.room-button.edit-mode span {
+    position: relative;
+    z-index: 1;
+    transition: filter 0.3s ease;
+}
+
+/* Desenfocar contenido al hover */
+.room-button.edit-mode:hover img,
+.room-button.edit-mode:hover span {
+    filter: blur(2px);
+    opacity: 0.8;
+}
+.room-button.edit-mode:hover .delete-icon-full {
+    opacity: 1;
+}
+
+
