--- a/frontend/src/components/grid/styles/gridView.css
+++ b/frontend/src/components/grid/styles/gridView.css
@@ -16,6 +16,7 @@
     overflow: scroll;
     max-width: 490px;
     height: 450px;
+    align-content: flex-start;
 }
 
 .room-grid::-webkit-scrollbar {
@@ -23,11 +24,12 @@
 }
 
 .room-button {
-    position: relative; /* Necesario para el posicionamiento absoluto del icono */
+    position: relative;
     border-radius: 12px;
     padding: 10px;
     box-shadow: 0 2px 5px var(--light-grone);
     width: 120px;
+    height: 120px;
     text-align: center;
     background-color: var(--blue-gray);
     cursor: pointer;
@@ -35,6 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .room-button:hover {
