--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,7 +24,8 @@ body {
   --app-green: #00FFFF19;
   --light-green: #81DFAF;
   --blue-gray: #7397ba;
-  --dark-gray: #475569;
+  --dark-gray: #4c596c;
+  --red--gray: #755e5e;
   --light-grone: #111A22;
   --lighter-gray: #D9D7F9;
   --champagne-pink: #f2dfd7;
