--- a/frontend/src/components/grid/styles/gridView.css
+++ b/frontend/src/components/grid/styles/gridView.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
     padding-top: 30px;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .room-grid {
