--- a/frontend/src/pages/styles/mainPage.css
+++ b/frontend/src/pages/styles/mainPage.css
@@ -30,6 +30,8 @@
     justify-content: flex-end;
     padding: 0 1rem;
     box-sizing: border-box;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
